prepare for release
git-svn-id: file:///Users/gauthierm/svnrepo/nategosearch/trunk@10983 94490950-a86c-4493-9ccb-530f72933e47

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2006-09-12  nrf
+
+	* [r10892] nategosearch/trunk/ChangeLog,
+	  nategosearch/trunk/package.php:
+	  prepare for release
+	* [r10891]
+	  nategosearch/trunk/NateGoSearch/NateGoSearchIndexer.php,
+	  nategosearch/trunk/NateGoSearch/NateGoSearchSpellChecker.php,
+	  nategosearch/trunk/package.php:
+	  Package data files better.
+
 2006-09-11  nick
 
 	* [r10768]
