--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2006-11-27  gauthierm
+
+	* [r13370] nategosearch/trunk/NateGoSearch/NateGoSearchQuery.php:
+	  Add methods to set blocked words. This was accidentally left
+	  unimplemented and will allow #319 to be fixed.
+
+2006-09-14  nrf
+
+	* [r10983] nategosearch/trunk/ChangeLog,
+	  nategosearch/trunk/package.php:
+	  prepare for release
+
 2006-09-12  nrf
 
 	* [r10892] nategosearch/trunk/ChangeLog,
