--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2007-08-02  gauthierm
+
+	* [r19084]
+	  nategosearch/trunk/NateGoSearch/NateGoSearchIndexer.php,
+	  nategosearch/trunk/NateGoSearch/NateGoSearchQuery.php:
+	  Fix careless typo.
+
+2007-08-02  nrf
+
+	* [r19081] nategosearch/trunk/ChangeLog,
+	  nategosearch/trunk/package.php:
+	  prepare for release of 1.0.4
+
 2007-08-01  gauthierm
 
 	* [r19019]
