--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,21 @@
+2007-10-23  gauthierm
+
+	* [r21808]
+	  nategosearch/trunk/NateGoSearch/NateGoSearchPSpellSpellChecker.php:
+	  
+	  remove extra + from expression.
+	* [r21807]
+	  nategosearch/trunk/NateGoSearch/NateGoSearchPSpellSpellChecker.php:
+	  
+	  Only spell check words with letters in them. Fixes ticket #1456:
+	  incorrect spelling suggestion on numbers.
+
+2007-10-05  nrf
+
+	* [r21075] nategosearch/trunk/ChangeLog,
+	  nategosearch/trunk/package.php:
+	  prepare for release of 1.0.8
+
 2007-09-21  charles
 
 	* [r20483]
