--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2007-10-23  charles
+
+	* [r21860]
+	  nategosearch/trunk/NateGoSearch/NateGoSearchPSpellSpellChecker.php:
+	  
+	  The spell checked should take the first suggestion from the
+	  array of suggestions and not the first letter of the last
+	  suggestion.
+
+2007-10-23  nrf
+
+	* [r21811] nategosearch/trunk/package.php:
+	  prepare for release of 1.0.10
+	* [r21810]
+	  nategosearch/trunk/NateGoSearch/NateGoSearchPSpellSpellChecker.php:
+	  
+	  Remove debug line that was committed.
+	* [r21809] nategosearch/trunk/ChangeLog,
+	  nategosearch/trunk/package.php:
+	  prepare for release of 1.0.9
+
 2007-10-23  gauthierm
 
 	* [r21808]
